@@ -1,1 +1,3 @@
-ClassDiagram3.0.vsdx - changed BuildSnapshot Item[10] to Dictionary<string, Item>
+ClassDiagram3.0.vsdx 
+	- changed BuildSnapshot Item[10] to Dictionary<string, Item>
+	- removed BuildMark BuildSnapshot member
